--- a/lecture/lecture/package.json
+++ b/lecture/lecture/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-minimal-side-navigation": "^1.9.2",
+    "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -40,4 +41,5 @@
       "last 1 safari version"
     ]
   }
+ 
 }
