--- a/lecture/lecture/package.json
+++ b/lecture/lecture/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-minimal-side-navigation": "^1.9.2",
     "react-modal": "^3.16.1",
@@ -41,5 +42,4 @@
       "last 1 safari version"
     ]
   }
- 
 }
